[tool.poetry]
name = "repl_python3_novasaur"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
humanfriendly = "^9.1"
python-dotenv = "^0.17.1"
replit = "^3.1.0"
trello = "^0.9.7"
aiohttp = "^3.7.4"
discord = "^1.0.1"
flask = "^2.0.1"
ro-py = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
